--- a/index.html
+++ b/index.html
@@ -175,7 +175,74 @@
           <div id="main" class="px-4 sm:px-6 px-8">
             <!-- Your content -->
             <div id="dashboard" class=""><div>Dashboard</div></div>
-            <div id="location" class="">Locations</div>
+            <div id="location" class="">
+              <div class="px-4 sm:px-6 lg:px-8">
+                <div class="sm:flex sm:items-center">
+                  <div class="sm:flex-auto">
+                    <h1 class="text-base font-semibold leading-6 text-gray-900">Location</h1>
+                    <p class="mt-2 text-sm text-gray-700">A list of all the users in your account including their name, title, email and role.</p>
+                  </div>
+                  <div class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
+                    <button type="button" class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add user</button>
+                  </div>
+                </div>
+                <div class="mt-8 flow-root">
+                  <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                    <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
+                      <table class="min-w-full divide-y divide-gray-300">
+                        <thead>
+                          <tr>
+                            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">Name</th>
+                            <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Time Spent</th>
+                            <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Date</th>
+                          </tr>
+                        </thead>
+                        <tbody class="divide-y divide-gray-200">
+                          <tr>
+                            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">Lindsay Walton</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">1Hr 30Min</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">12th Dec 2023</td>
+                          </tr>
+                          <tr>
+                            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">Ibad Chauhan</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">30Min</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">12th Dec 2023</td>
+                          </tr>
+                          <tr>
+                            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">Basant Mandal</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">2Hr</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">12th Dec 2023</td>
+                          </tr>
+                          <tr>
+                            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">Utkarsh Mehta</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">23Min</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">12th Dec 2023</td>
+                          </tr>
+                          <tr>
+                            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">Mushahid Shaikh</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">3Min</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">11th Dec 2023</td>
+                          </tr>
+                          <tr>
+                            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">Tanzeel Iqbal</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">40Min</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">11th Dec 2023</td>
+                          </tr>
+                          <tr>
+                            <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">Aakash Mishra</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">1Hr 30Min</td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">11th Dec 2023</td>
+                          </tr>
+              
+                          <!-- More people... -->
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+            </div>
             <div id="people" class="">People</div>
             <div id="object" class="">Objects</div>
             <div id="alert" class="">Alerts</div>
