--- a/index.html
+++ b/index.html
@@ -783,8 +783,264 @@
                 </div>
               </div>
             </div>
-            <div id="people" class="">People</div>
-            <div id="object" class="">Objects</div>
+            <div id="people" class="">
+              <div class="px-4 sm:px-6 lg:px-8">
+                  <div class="sm:flex sm:items-center">
+                      <div class="sm:flex-auto">
+                          <h1 class="text-base font-semibold leading-6 text-gray-900">People</h1>
+                          <p class="mt-2 text-sm text-gray-700">A list of all the users in your account
+                              including their name, location and time.</p>
+                      </div>
+                      <div class="flex justify-end items-end">
+                        <div date-rangepicker class="flex items-center">
+                          <div class="relative">
+                            <div
+                              class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
+                            >
+                              <svg
+                                class="w-4 h-4 text-gray-500"
+                                aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg"
+                                fill="currentColor"
+                                viewBox="0 0 20 20"
+                              >
+                                <path
+                                  d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"
+                                />
+                              </svg>
+                            </div>
+                            <input
+                              name="start"
+                              type="text"
+                              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-1"
+                              placeholder="Select date start"
+                            />
+                          </div>
+                          <span class="mx-4 text-gray-500">to</span>
+                          <div class="relative">
+                            <div
+                              class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
+                            >
+                              <svg
+                                class="w-4 h-4 text-gray-500"
+                                aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg"
+                                fill="currentColor"
+                                viewBox="0 0 20 20"
+                              >
+                                <path
+                                  d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"
+                                />
+                              </svg>
+                            </div>
+                            <input
+                              name="end"
+                              type="text"
+                              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-1"
+                              placeholder="Select date end"
+                            />
+                          </div>
+                        </div>
+                        <div class="ml-2">
+                          <select
+                            id="location"
+                            name="location"
+                            class="block w-full rounded-md border-0 py-1.5 pl-3 pr-10 text-gray-900 ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                          >
+                            <option>Filter by location</option>
+                            <option>Mumbai</option>
+                            <option>Pune</option>
+                            <option>Chennai</option>
+                          </select>
+                        </div>
+                        <div class="ml-2">
+                          <input type="text" name="name" id="name"
+                              class="block w-full rounded-md border-0 py-1.5 pl-3 pr-10 text-gray-900 ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                              placeholder="Search by name" onkeyup='changeName()'>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="mt-8 flow-root">
+                      <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                          <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
+                              <table class="min-w-full divide-y divide-gray-300">
+                                  <thead>
+                                      <tr>
+                                          <th scope="col"
+                                              class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">
+                                              Name</th>
+                                          <th scope="col"
+                                              class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
+                                              Location</th>
+                                          <th scope="col"
+                                              class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
+                                              Time Stamp</th>
+                                      </tr>
+                                  </thead>
+                                  <tbody class="divide-y divide-gray-200" id="peoplestable">
+                                      <tr>
+                                          <td
+                                              class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">
+                                              Basant Mandal</td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Mumbai
+                                          </td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">11:00
+                                              AM - 11:45 AM</td>
+                                      </tr>
+                                      <tr>
+                                          <td
+                                              class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">
+                                              Ibad Chauhan</td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Pune
+                                          </td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">11:00
+                                              AM - 11:45 AM</td>
+                                      </tr>
+                                      <tr>
+                                          <td
+                                              class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">
+                                              Pradeep P</td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                                              Chennai</td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">11:00
+                                              AM - 11:45 AM</td>
+                                      </tr>
+                                  </tbody>
+                              </table>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div id="object" class="">
+              <div class="px-4 sm:px-6 lg:px-8">
+                  <div class="sm:flex sm:items-center">
+                      <div class="sm:flex-auto">
+                          <h1 class="text-base font-semibold leading-6 text-gray-900">Object</h1>
+                          <p class="mt-2 text-sm text-gray-700">A list of all the users in your account
+                              including their name, location and time.</p>
+                      </div>
+                      <div class="flex justify-end items-end">
+                        <div date-rangepicker class="flex items-center">
+                          <div class="relative">
+                            <div
+                              class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
+                            >
+                              <svg
+                                class="w-4 h-4 text-gray-500"
+                                aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg"
+                                fill="currentColor"
+                                viewBox="0 0 20 20"
+                              >
+                                <path
+                                  d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"
+                                />
+                              </svg>
+                            </div>
+                            <input
+                              name="start"
+                              type="text"
+                              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-1"
+                              placeholder="Select date start"
+                            />
+                          </div>
+                          <span class="mx-4 text-gray-500">to</span>
+                          <div class="relative">
+                            <div
+                              class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
+                            >
+                              <svg
+                                class="w-4 h-4 text-gray-500"
+                                aria-hidden="true"
+                                xmlns="http://www.w3.org/2000/svg"
+                                fill="currentColor"
+                                viewBox="0 0 20 20"
+                              >
+                                <path
+                                  d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"
+                                />
+                              </svg>
+                            </div>
+                            <input
+                              name="end"
+                              type="text"
+                              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-1"
+                              placeholder="Select date end"
+                            />
+                          </div>
+                        </div>
+                        <div class="ml-2">
+                          <select
+                            id="location"
+                            name="location"
+                            class="block w-full rounded-md border-0 py-1.5 pl-3 pr-10 text-gray-900 ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                          >
+                            <option>Filter by location</option>
+                            <option>Self</option>
+                            <option>Cupboard</option>
+                            <option>Kitchen</option>
+                          </select>
+                        </div>
+                        <div class="ml-2">
+                          <input type="text" name="objectname" id="objectname"
+                              class="block w-full rounded-md border-0 py-1.5 pl-3 pr-10 text-gray-900 ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                              placeholder="Search by object name" onkeyup='objectName()'>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="mt-8 flow-root">
+                      <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                          <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
+                              <table class="min-w-full divide-y divide-gray-300">
+                                  <thead>
+                                      <tr>
+                                          <th scope="col"
+                                              class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">
+                                              Object Name</th>
+                                          <th scope="col"
+                                              class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
+                                              Location</th>
+                                          <th scope="col"
+                                              class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
+                                              Time Stamp</th>
+                                      </tr>
+                                  </thead>
+                                  <tbody class="divide-y divide-gray-200" id="peoplestable">
+                                      <tr>
+                                          <td
+                                              class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">
+                                              Books</td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Self
+                                          </td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">11:00
+                                              AM - 11:45 AM</td>
+                                      </tr>
+                                      <tr>
+                                          <td
+                                              class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">
+                                              Glass</td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Cupboard
+                                          </td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">11:00
+                                              AM - 11:45 AM</td>
+                                      </tr>
+                                      <tr>
+                                          <td
+                                              class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">
+                                              Bottle</td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                                              Kitchen</td>
+                                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">11:00
+                                              AM - 11:45 AM</td>
+                                      </tr>
+                                  </tbody>
+                              </table>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
             <div id="alert" class="">
               <div class="px-4 sm:px-6 lg:px-8">
                 <div class="sm:flex sm:items-center">
