--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
                                               Time Stamp</th>
                                       </tr>
                                   </thead>
-                                  <tbody class="divide-y divide-gray-200" id="peoplestable">
+                                  <tbody class="divide-y divide-gray-200" id="objectstable">
                                       <tr>
                                           <td
                                               class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-0">
